@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2009-10-12 [B] Fix missing user admin buttons (thread ID 62046) {Paver}
 2009-10-12 [A] Allow theme to override default pic_info and slideshow buttons on displayimage (thread ID 61877) {Paver}
 2009-10-07 [O] Replaced hard coded JPEG quality with config value in picture editor {eenemeenemuu}
 2009-10-07 [B] Fixed several issues with picture editor (thread ID 61789) {eenemeenemuu}
